icons and animations

--- a/css/playeah-pops.css
+++ b/css/playeah-pops.css
@@ -124,8 +124,8 @@
  div[id*=playeah-pop] .pp-modal-header .close {padding: 20px;margin: 0;position: absolute;top: 6px;right: 8px;opacity: 1;outline: 0;z-index: 2}
  div[id*=playeah-pop] .pp-modal-header .close:before {content: '';width: 15px;height: 15px;position: absolute;top: 12.5px;right: 12.5px;background-size: contain;opacity: .3;-webkit-transition: opacity 0.3s ease-in-out;-moz-transition: opacity 0.3s ease-in-out;-ms-transition: opacity 0.3s ease-in-out;-o-transition: opacity 0.3s ease-in-out;transition: opacity 0.3s ease-in-out}
  div[id*=playeah-pop] .pp-modal-header .close:hover:before {opacity: 1}
- div[id*=playeah-pop] .close.close-light:before {background-image: url(../images/icon-close-light.svg);opacity: .6}
- div[id*=playeah-pop] .close.close-dark:before {background-image: url(../images/icon-close.dark.svg)}
+ div[id*=playeah-pop] .close.close-light:before {background-image: url(https://cdn.jsdelivr.net/gh/robgalvinco/playeah-pops@latest/images/icon-close-light.svg);opacity: .6}
+ div[id*=playeah-pop] .close.close-dark:before {background-image: url(https://cdn.jsdelivr.net/gh/robgalvinco/playeah-pops@latest/images/icon-close.dark.svg)}
  
  div[id*=playeah-pop] .popup-title {color: #0f0f0f;font-weight: 700}
  
@@ -505,8 +505,8 @@
  @media 
  (-webkit-min-device-pixel-ratio: 2), 
  (min-resolution: 192dpi) { 
-     div[id*=playeah-pop] .close.close-light:before {background-image: url(../images/icon-close-light@2x.svg)}
-     div[id*=playeah-pop] .close.close-dark:before {background-image: url(../images/icon-close-dark@2x.svg)}
+     div[id*=playeah-pop] .close.close-light:before {background-image: url(https://cdn.jsdelivr.net/gh/robgalvinco/playeah-pops@latest/images/icon-close-light@2x.svg)}
+     div[id*=playeah-pop] .close.close-dark:before {background-image: url(https://cdn.jsdelivr.net/gh/robgalvinco/playeah-pops@latest/images/icon-close-dark@2x.svg)}
  }
  @media (min-width: 576px) {
      div[id*=playeah-pop].m-width-870 .modal-dialog {max-width: 870px}
