--- a/css/16.css
+++ b/css/16.css
@@ -1,5 +1,5 @@
 #playeah-pops .pp-modal-content {
-    background-color: {{color_bg}};
+    background-color: {color_bg};
 }
 #playeah-pops .pp-modal-header {
     padding-bottom: 41px;
@@ -12,20 +12,20 @@
     line-height: 22px;
     font-size: 22px;
     margin-bottom: 18px;
-    color: {{color_heading}};
+    color: {color_heading};
 }
 #playeah-pops .popup-text {
     line-height: 22px;
     font-size: 14px;
-    color: {{color_copy}};
+    color: {color_copy};
 }
 
 #playeah-pops .btn {
     height: 46px;
     font-size: 14px;
     line-height: 33px;
-    background-color: {{color_cta_bg}};
-    color : {{color_cta_text}};
+    background-color: {color_cta_bg};
+    color : {color_cta_text};
 }
 #playeah-pops .btn:hover {
     opacity: .85;
