--- a/css/11.css
+++ b/css/11.css
@@ -1,6 +1,6 @@
 #playeah-pops .pp-modal-content {
     padding: 60px;
-    background-image: url({{img_src}});
+    background-image: url({img_src});
     background-color: transparent;
     background-size: cover;
     background-repeat: no-repeat;
@@ -10,14 +10,14 @@
     font-size: 36px;
     line-height: 1.3;
     margin-bottom: 13px;
-    color: {{color_heading}};
+    color: {color_heading};
 }
 #playeah-pops .popup-text {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.1px;
     margin-bottom: 35px;
-    color: {{color_copy}};
+    color: {color_copy};
 }
 #playeah-pops .popup-image-inner {
     height: 240px;
@@ -33,8 +33,8 @@
     height: 50px;
     font-size: 16px;
     line-height: 38px;    
-    background-color: {{color_cta_bg}};
-    color : {{color_cta_text}};    
+    background-color: {color_cta_bg};
+    color : {color_cta_text};    
     -webkit-transition: all .15s ease-in-out;
     -moz-transition: all .15s ease-in-out;
     -ms-transition: all .15s ease-in-out;
@@ -50,7 +50,7 @@
 }
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
     #playeah-pops .pp-modal-content {
-        background-image: url({{img_src}});
+        background-image: url({img_src});
     }
 }
 @media only screen and (max-width: 767px) {
