--- a/css/2.css
+++ b/css/2.css
@@ -1,27 +1,27 @@
 #playeah-pops .pp-modal-content {
     padding: 22px;
-    background-color: {{color_bg}};
+    background-color: {color_bg};
 
 }
 
 #playeah-pops .popup-title {
     font-size: 20px;
     line-height: 1.3;
-    color: {{color_heading}};
+    color: {color_heading};
 }
 #playeah-pops .popup-text {
     font-size: 14px;
     line-height: 1.71;
-    color: {{color_copy}};
+    color: {color_copy};
     margin-bottom: 34px;
 }
 #playeah-pops .btn {
     width: 258.1px;
     height: 48px;
-    background-color: {{color_cta_bg}};
+    background-color: {color_cta_bg};
     font-size: 16px;
     line-height: 1.5;
-    color: {{color_cta_text}};
+    color: {color_cta_text};
 }
 #playeah-pops .btn:hover {
     background-color:opacity: .85;
